@@ -2,6 +2,8 @@
 
 ### 1.8.4
 * Fix - Re-added the get_comments_number() fix
+* Fix - Footer widgets changed breakpoint
+* Fix - Keep default behaviour from sliders on mobile
 
 ### 1.8.3
 * Fix - Removed custom image classes from avatar in admin bar
